show cheese but not movable

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -95,6 +95,9 @@
    <property name="text">
     <string>&amp;New</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
   </action>
   <action name="action_Pieces">
    <property name="text">
@@ -109,6 +112,8 @@
    <header>cheeseview.h</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="mainwindow.qrc"/>
+ </resources>
  <connections/>
 </ui>
