add current color; fix lcdnumber coloc

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -31,6 +31,13 @@
        </spacer>
       </item>
       <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Time Remain</string>
@@ -41,6 +48,9 @@
        <widget class="QLCDNumber" name="lcdNumber">
         <property name="digitCount">
          <number>3</number>
+        </property>
+        <property name="segmentStyle">
+         <enum>QLCDNumber::Flat</enum>
         </property>
        </widget>
       </item>
@@ -63,13 +73,6 @@
          </size>
         </property>
        </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
       </item>
      </layout>
     </item>
